@@ -6,6 +6,10 @@ Changes from jTDS 1.2
    'JtdsDataSource' class.
  o Alphabetized parameters in faq.html to make them easier to find.
  o Added missing </code> tag in "badrpc" question in faq.html.
+ o Updated the loginTimeout parameter information in faq.html to document
+   behavior with TCP/IP connections.
+ o Fixed the "What are the class names...?" question to match the TOC
+   entry.
 
 12/19/2005 - Alin Sinpalean
  o Minor optimization in determining the scale for decimal parameters.
